test/errors/rule_suelto.mg
% EXPECT: solo es válido dentro de un plot
% EXPECT_AT: 4:1
display_size 5 5
rule(x=3)
